[gd_scene load_steps=7 format=3 uid="uid://c8xa7degaivsv"]

[ext_resource type="Script" uid="uid://bfe30tjeqcjka" path="res://scenes and scripts/ufo.gd" id="1_sm6t1"]
[ext_resource type="Texture2D" uid="uid://bo66ks3co62y3" path="res://textures/ufo-fly1.png" id="1_ucau6"]
[ext_resource type="Texture2D" uid="uid://dte1211o8wkwf" path="res://textures/ufo-fly2.png" id="2_7upjt"]
[ext_resource type="AudioStream" uid="uid://cx06aib1bigbp" path="res://audio/ufo_down.wav" id="4_x6a46"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s1x41"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ucau6")
}, {
"duration": 1.0,
"texture": ExtResource("2_7upjt")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebjqy"]
size = Vector2(68, 38)

[node name="ufo" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource("1_sm6t1")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s1x41")
animation = &"fly"
autoplay = "fly"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ebjqy")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x6a46")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="death_sound" to="." method="_on_death_sound_finished"]
